Updated language level from 8 to 9